@@ -1,69 +1,67 @@
 package com.example.chart_backend.repository;
 
-import org.springframework.beans.factory.annotation.Value;
+import com.cloudinary.Cloudinary;
+import com.cloudinary.utils.ObjectUtils;
+import com.example.chart_backend.dto.FileInfo;
+import com.example.chart_backend.entity.FileMgmt;
+import lombok.RequiredArgsConstructor;
 import org.springframework.core.io.ByteArrayResource;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Repository;
-import org.springframework.util.DigestUtils;
-import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
-import com.example.chart_backend.dto.FileInfo;
-import com.example.chart_backend.entity.FileMgmt;
-
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
+import java.net.URL;
+import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
 
 @Repository
+@RequiredArgsConstructor
 public class FileRepository {
 
-    @Value("C:/upload")
-    String storageDir;
-
-    @Value("http://localhost:8080/api/v1/users/media/download/")
-    String urlPrefix;
+    private final Cloudinary cloudinary;
 
     public FileInfo store(MultipartFile file) throws IOException {
-        Path folder = Paths.get(storageDir);
-        Files.createDirectories(folder); // đảm bảo folder tồn tại
+        Map<String, Object> uploadResult = cloudinary.uploader().upload(
+                file.getBytes(),
+                ObjectUtils.asMap(
+                        "public_id", UUID.randomUUID().toString(),
+                        "resource_type", "auto" // ảnh / video / pdf
+                ));
 
-        String fileExtension = StringUtils.getFilenameExtension(file.getOriginalFilename());
-
-        String fileName = Objects.isNull(fileExtension)
-                ? UUID.randomUUID().toString()
-                : UUID.randomUUID() + "." + fileExtension;
-
-        Path filePath = folder.resolve(fileName).normalize().toAbsolutePath();
-
-        // đọc bytes 1 lần để vừa lưu file, vừa tính md5
-        byte[] bytes = file.getBytes();
-        Files.write(filePath, bytes);
-
-        String md5 = DigestUtils.md5DigestAsHex(bytes);
+        String publicId = Objects.toString(uploadResult.get("public_id"), "");
+        String secureUrl = Objects.toString(uploadResult.get("secure_url"), "");
+        String originalFilename = Objects.toString(uploadResult.get("original_filename"), "unknown");
 
         return FileInfo.builder()
-                .name(fileName)
+                .name(originalFilename)
                 .size(file.getSize())
                 .contentType(file.getContentType())
-                .md5Checksum(md5)
-                .path(filePath.toString())
-                .url(fileName)
+                .path(publicId) // LƯU public_id ở đây
+                .url(secureUrl) // LƯU secure_url để FE dùng trực tiếp
                 .build();
     }
 
     public Resource read(FileMgmt fileMgmt) throws IOException {
-        var data = Files.readAllBytes(Path.of(fileMgmt.getPath()));
+        // Nếu vẫn muốn cho download qua BE:
+        URL url = new URL(fileMgmt.getUrl()); // đã lưu secure_url ở DB
+        byte[] data = url.openStream().readAllBytes();
         return new ByteArrayResource(data);
     }
 
-    public void delete(FileMgmt fileMgmt) throws IOException {
-        if (fileMgmt == null || fileMgmt.getPath() == null)
-            return;
-        Files.deleteIfExists(Path.of(fileMgmt.getPath()));
+    public void delete(FileMgmt fileMgmt) {
+        try {
+            if (fileMgmt == null)
+                return;
+
+            String publicId = fileMgmt.getUrl(); // DÙNG PATH (public_id) chứ không parse URL
+            if (publicId == null || publicId.isBlank())
+                return;
+
+            cloudinary.uploader().destroy(publicId, ObjectUtils.emptyMap());
+        } catch (IOException e) {
+            throw new RuntimeException("Không thể xóa file khỏi Cloudinary", e);
+        }
     }
 }
